add style and delete jquery/bootstrap

--- a/src/components/GeneralElements/GeneralElements.css
+++ b/src/components/GeneralElements/GeneralElements.css
@@ -1,3 +1,26 @@
-.button {
-  margin: 10px;
+button {
+  display: inline-block;
+  width: 100px;
+  height: 40px;
+  padding: 5px;
+  font: inherit;
+  vertical-align: top;
+  text-align: center;
 }
+
+th {
+  background: rgb(138, 138, 185);
+  font-weight: normal;
+  color: rgb(0, 0, 0);
+  border-bottom: 2px solid #6678b1;
+  padding: 10px 8px;
+}
+td {
+  color: rgb(16, 16, 48);
+  padding: 9px 8px;
+  transition: .3s linear;
+  border-bottom: 1px solid #ccc;
+}
+
+tr:hover td {background: #e8edff;}
+
