--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,32 @@
 .header {
   display: flex;
+  margin-bottom: 50px;
   position: relative;
   top: 0;
   width: 100%;
-  height: 50px;
-  background: gray;
+  height: 80px;
+  background: #f7f7f7;
+  border-bottom: 1px solid gray;
 }
 
-.header div {
-  margin: 10px;
+.btn__header {
+  width: 35%;
+  height: 100%;
+  background: #f7f7f7;
+  border: none;
+  transition: .3s linear;
+
 }
 
-a {
-  color: black;
+.btn__header:hover {
+  background: #e8edff;
+}
+
+.btn__header:active {
+  background: #d1d1d1;
+}
+
+img {
+  width: 75px;
+  height: 100%;
 }
