--- a/src/components/MembersManageGrid/MembersManageGrid.css
+++ b/src/components/MembersManageGrid/MembersManageGrid.css
@@ -1,3 +1,16 @@
-.container {
-  margin-top: 70px;
+
+table {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-size: 14px;
+  background: #f8f8f8;
+  border-collapse: collapse;
+  text-align: center;
+  margin: auto;
 }
+
+.container {
+  max-width: 70%;
+  width: 70%;
+  margin: auto;
+}
+
