--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,24 +5,33 @@
   top: 0;
   width: 100%;
   height: 80px;
+  line-height: 80px;
+  font-size: 20px;
   background: #f7f7f7;
   border-bottom: 1px solid gray;
 }
 
-.btn__header {
+.btn__header,
+.btn__header:link,
+.btn__header:visited {
+  color: black;
+  text-decoration: none;
+  vertical-align: 20px;
+  text-align: center;
   width: 35%;
   height: 100%;
   background: #f7f7f7;
   border: none;
   transition: .3s linear;
-
 }
 
 .btn__header:hover {
+  text-decoration: none;
   background: #e8edff;
 }
 
 .btn__header:active {
+  text-decoration: none;
   background: #d1d1d1;
 }
 
