--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,7 +27,7 @@
 
 .btn__header:hover {
   text-decoration: none;
-  background: #e8edff;
+  background: rgba(0,0,0,.075);;
 }
 
 .btn__header:active {
