rewritten login page

--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -2,7 +2,7 @@
     background: rgb(245, 245, 245);
     border: 1px solid gray;
     border-radius: 5px;
-    margin: auto;
+    margin: 50px auto;
     padding: 20px;
     width: 30%;
 }
