--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,7 +27,7 @@
 
 .btn__header:hover {
   text-decoration: none;
-  background: rgba(0,0,0,.075);;
+  background: rgba(0,0,0,.075);
 }
 
 .btn__header:active {
@@ -38,4 +38,20 @@
 img {
   width: 75px;
   height: 100%;
+}
+
+.green:hover {
+  background: rgb(234, 253, 188);
+}
+
+.green:active {
+  background: rgb(212, 253, 114);
+}
+
+.blue:hover {
+  background: rgb(166, 159, 255);
+}
+
+.blue:active {
+  background: rgb(83, 71, 255);
 }
