--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,6 +12,11 @@ table {
   font-family: 'Lucida Sans Unicode', 'Lucida Grande', Sans-Serif;
   font-size: 14px;
   text-align: center;
+  margin-top: 20px;
+}
+
+.btn {
+  margin: 5px;
 }
 
 .text {
