--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,15 +1,24 @@
-.login__container {
+.login_page {
+  height: 90vh;
+}
+.logo_container {
+  display: inline-block;
   position: relative;
-  top: 25%;
-  left: 15%;
+  top: -50px;
+  padding: 5%;
+  height: 100%;
+  width: 45%;
+  background: url('../assets/human1.png') 100% 100% no-repeat;
+}
+
+.login__container {
+  display: inline-block;
+  position: relative;
   background: rgb(245, 245, 245);
   border: 1px solid gray;
   border-radius: 5px;
-  margin: 50px auto;
   padding: 20px;
-  width: 30%;
-}
-.login_page {
-  height: 90vh;
-  background: no-repeat 15% 40% url('../assets/human1.png');
+  top: -300px;
+  right: -100px;
+  width: 25%;
 }
