--- a/src/components/common/loader/style.css
+++ b/src/components/common/loader/style.css
@@ -64,7 +64,7 @@
   position: relative;
   animation: loader 2s infinite ease-in-out;
 }
-.loader span {
+.span {
   width: 50px;
   height: 50px;
   position: absolute;
@@ -73,15 +73,15 @@
   border: 4px solid rgb(97, 126, 255);
   border-radius: 50%;
 }
-.loader span:nth-child(1) {
+.span:nth-child(1) {
   animation: span-1 2s ease-in-out infinite;
 }
-.loader span:nth-child(2) {
+.span:nth-child(2) {
   animation: span-2 2s ease-in-out infinite;
 }
-.loader span:nth-child(3) {
+.span:nth-child(3) {
   animation: span-3 2s ease-in-out infinite;
 }
-.loader span:nth-child(4) {
+.span:nth-child(4) {
   animation: span-4 2s ease-in-out infinite;
 }
