--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,10 +2,12 @@
   min-height: 100vh;
 }
 
-.container {
-  width: 70%;
-  margin: auto;
+.grid {
+  display: inline-block;
+  margin-left: 10%;
+  width: 80%;
   text-align: center;
+  transition: 0.3s linear;
 }
 
 table {
@@ -56,12 +58,14 @@ table {
 .btn__header,
 .btn__header:link,
 .btn__header:visited {
+  position: absolute;
+  right: 0;
   cursor: pointer;
   color: black;
   text-decoration: none;
   vertical-align: 20px;
   text-align: center;
-  width: 35%;
+  padding: 0 20px;
   height: 100%;
   border: none;
   transition: 0.3s linear;
